--- a/src/styles/brackets_scrollbars.less
+++ b/src/styles/brackets_scrollbars.less
@@ -182,7 +182,7 @@
     &.platform-linux, &.platform-mac {
         .CodeMirror-scrollbar-filler,
         .CodeMirror-gutter-filler {
-            background-color: #1d1f21;
+            background-color: transparent;
         }
 
         ::-webkit-scrollbar-thumb {
